# libcrc64

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
include/: crc64.h
src/: lib.rs  test.c
